add full crud + page de crud